[package]
name = "test_gui"
version = "0.1.0"
edition = "2024"

license = "BSD-3-Clause"
authors = ["Ibrahim Erturk <me@erturk.me>, ErturkMe"]

description = "A RPC service library for the zsc31050-calib-rust project"
homepage = "https://github.com/erturkme/zsc31050-calib-rust"
repository = "https://github.com/erturkme/zsc31050-calib-rust"
# documentation = "https://docs.rs/common"
keywords = ["dds", "rpc", "async", "binding"]
categories = ["data-distribution-service", "remote-procedure-call"]
readme = "README.md"


[dependencies]
slint = { version = "1.10", default-features = false, features = ["std", "backend-default", "renderer-femtovg", "renderer-software", "compat-1-2", "gettext"] } 
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

common = { path = "../common" }
rbic1_dll_svc = { path = "../rbic1_dll_svc", default-features = false }

[build-dependencies]
slint-build = "1.10"

[[bin]]
name = "test_gui"
path = "src/main.rs"

[lib]
name = "test_gui_lib"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]
